# ExtrCamCalib_PersonKeypoints

./: .gitignore  LICENSE  README.md
keypoint_camera_calibration/: CMakeLists.txt  package.xml
keypoint_camera_calibration/examples/: camera_extrinsics_reference.yaml  camera_intrinsics.yaml  keypoint_correspondences.txt
keypoint_camera_calibration/examples/bagfiles/: bagfiles.php⁄s⁄F8DqX7sFCHaodBN
keypoint_camera_calibration/examples/map/: map.pgm
keypoint_camera_calibration/examples/presets/: 20cams_pose2D.perspective  BagSetup20Cams.rviz
keypoint_camera_calibration/launch/: calibration.launch
keypoint_camera_calibration/msg/: Person2DWithID.msg
keypoint_camera_calibration/scripts/: calibration.py
person_msgs/: CMakeLists.txt
person_msgs/launch/: pose2D_plot.launch
person_msgs/msg/: Person2DOcclusion.msg  Person2DOcclusionList.msg
person_msgs/scripts/: pose2D_plot_node.py
