<?xml version="1.0"?>
<package format="3">
  <name>keypoint_camera_calibration</name>
  <description>Online Marker-free Extrinsic Camera Calibration using Person Keypoint Detections</description>
  <version>0.0.1</version>
  <license>BSD</license>
  <maintainer email="paetzold@uni-bonn.de">Bastian Pätzold</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy></depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>üerson_msgs</depend>
  
</package>
